tests/baselines/reference/ambiguousOverloadResolution(strict=true).errors.txt
ambiguousOverloadResolution.ts(2,21): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
ambiguousOverloadResolution.ts(8,19): error TS2454: Variable 'x' is used before being assigned.
ambiguousOverloadResolution.ts(8,22): error TS2454: Variable 'x' is used before being assigned.


==== ambiguousOverloadResolution.ts (3 errors) ====
    class A { }
    class B extends A { x: number; }
                        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    
    declare function f(p: A, q: B): number;
    declare function f(p: B, q: A): string;
    
    var x: B;
    var t: number = f(x, x); // Not an error
                      ~
!!! error TS2454: Variable 'x' is used before being assigned.
                         ~
!!! error TS2454: Variable 'x' is used before being assigned.